[package]
name = "secrets-manager-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"                # For logging
simplelog = "0.11"         # For easy logging configuration
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21"
aes-gcm = "0.10"  # or the latest version
aes = "0.8"
